O remover do lipe ja esta funcionando, adicionar aparecendo em todas listas ja passando parametro pra usar dps no remover delas

--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
             <p>Gian</p>
         </div>
         <div id="quadro">
-            <select id="rhuanRecebe" size="8"></select>
-            <select id="lipeRecebe" size="8"></select>
-            <select id="gianRecebe" size="8"></select>
+            <select id="rhuanRecebe" size="8" ></select>
+            <select id="lipeRecebe" size="8" ></select>
+            <select id="gianRecebe" size="8" ></select>
+        </div>
+        <div>
+            <input type="button" value="Remover!" id="remover">
         </div>
 
     </section>
