projeto basico pronto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relogio</title>
+    <title>Ap302</title>
 
     <link rel = "shortcut icon" type = "imagem/x-icon" href = "./icone.ico"/>
 
@@ -14,7 +14,7 @@
 </head>
 <body>
     <head>
-        <h1 id="branco">Calculo</h1>
+        <h1 id="branco">FINANÇAS</h1>
     </head>
 
     <section>
@@ -38,8 +38,7 @@
             <label for="rhuand">Rhuan</label>
         </div>
         <div>
-            <input type="button" value="Adicionar!" onclick="adicionar()">
-            <input type="button" value="Calcular!" onclick="calcular()">
+            <input type="button" value="Adicionar!" id="adicionar">
         </div>
         <div id="nomes">
             <p>Rhuan</p>
@@ -53,6 +52,13 @@
         </div>
         <div>
             <input type="button" value="Remover!" id="remover">
+        </div>
+
+        <div id="resultado">
+        </div>
+        <div id="resultado2">
+        </div>
+        <div id="resultado3">
         </div>
 
     </section>
