versao com bota calcular

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
         <div>
             <input type="button" value="Remover!" id="remover">
+            <input type="button" value="Calcular!" id="calcular">
         </div>
 
         <div id="resultado">
