versao final sem atualização em tempo real

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <input type="button" value="Remover!" id="remover">
             <input type="button" value="Calcular!" id="calcular">
         </div>
+        <div>
+            <input type="button" value="Limpar tudo!" id="limpar">
+        </div>
 
         <div id="resultado">
         </div>
